# smartphone-supplychain

./: .gitignore  README.md  pyproject.toml  requirements.txt
darts_logs/TFT_model/: _model.pth.tar
src/analysis/: analyze_event_multipliers.py  analyze_historical_events.py  comprehensive_eda.py  eda.ipynb  event_pattern_analysis.py  event_prediction_model.py  forecast_validation.py  marketing_demand_correlation_analysis.py
src/data/: check_missing_outliers.py  feature_engineering.py  process_consumer_confidence.py  process_currency.py  process_demand.py  process_oil_price.py
src/models/: exact_baseline_model.py  fill_forecast_submission.py  final_forecast_model.py  simple_baseline_model.py  simplified_final_model.py  sky-ie-competition-baseline-generator-code.py  train_baseline_demand_model.py  xgboost_model.py  xgboost_subset_berlin_sku0001.py
src/tft/: eda.ipynb  preprocessing.ipynb  preprocessing.py  tft_train.ipynb  tft_train_event.ipynb  tft_train_event_key_country.ipynb  tide_train.ipynb  tide_train.py
