[project]
name = "smartphone-supplychain"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "3.11.9"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "pyomo (>=6.9.2,<7.0.0)",
    "gurobipy (>=12.0.2,<13.0.0)",
    "dvc (>=3.60.1,<4.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
